# aoc2024

c/: fourteen.c  nine.c  seventeen.c  thirteen.c  twelve.c
fs/: fifteen.fsx  five.fsx  four.fsx  six.fsx  sixteen.fsx  ten.fsx  three.fsx
rs/: Cargo.toml
rs/eight/: main.rs
rs/eleven/: main.rs
rs/one/: main.rs
rs/seven/: main.rs
rs/src/: lib.rs
rs/two/: main.rs
zig/: eighteen.zig  nineteen.zig  twenty.zig
