[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2024"

[[bin]]
name = "one"
path = "one/main.rs"

[[bin]]
name = "two"
path = "two/main.rs"

[[bin]]
name = "seven"
path = "seven/main.rs"

[[bin]]
name = "eight"
path = "eight/main.rs"

[[bin]]
name = "eleven"
path = "eleven/main.rs"

[dependencies]
